Make gradient background full-screen

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -126,9 +126,9 @@ ul {
 
 /* Event View */
 .events-detail-view {
-    padding: 50px 15% 5% 15%;
+    min-height: 100%;
     background-image: linear-gradient( to right, red, #f06d06);
-    height: 100%;
+    padding: 50px 15% 5% 15%;
 }
 .participants-table {
     margin-top: 20px;
