Anyone logged in can view the players list.

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -147,6 +147,8 @@ li.sortedPlayer:before {
     content: "\f047";
     margin-right: 5px;
     font-size: 10px;
+}
+li.sortedPlayer {
     cursor: pointer;
 }
 .player-list li {
