--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -26,6 +26,14 @@ ul {
     background-color: #ff3232 !important;
     border: 1px #ff3232 solid !important;
 }
+label {
+    font-weight: 200 !important;
+    display: block !important;
+    margin: 5px !important;
+}
+input[type="checkbox"] {
+    margin-right: 5px !important;
+}
 
 /* Index View */
 .contentView {
@@ -151,6 +159,9 @@ li.sortedPlayer:before {
 li.sortedPlayer {
     cursor: pointer;
 }
+li.sortedPlayer span {
+    display: block;
+}
 .player-list li {
     background-color: #f3f3fe;
     margin-bottom: 6px;
@@ -174,7 +185,7 @@ li.sortedPlayer {
 .org-view{
     padding: 50px;
     background-image: linear-gradient( to right, #457fca, #5691c8);
-    height: 100%;
+    min-height: 100%;
 }
 .events-table {
     margin-top: 20px;
