--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -26,11 +26,6 @@ ul {
     background-color: #ff3232 !important;
     border: 1px #ff3232 solid !important;
 }
-label {
-    font-weight: 200 !important;
-    display: block !important;
-    margin: 5px !important;
-}
 input[type="checkbox"] {
     margin-right: 5px !important;
 }
@@ -179,6 +174,11 @@ li.sortedPlayer span {
     background-color: white;
     padding: 15px;
     margin: 20px 0 20px 0;
+}
+label.htmlCheckBox {
+    font-weight: 200 !important;
+    display: block !important;
+    margin: 5px !important;
 }
 
 /* Org view */
