Asking for schedule when creating an event.

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -180,6 +180,9 @@ label.htmlCheckBox {
     display: block !important;
     margin: 5px !important;
 }
+.events-schedule {
+    white-space: pre-line;
+}
 
 /* Org view */
 .org-view{
