--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -8,6 +8,7 @@
         <h4>{{ event_loc }}</h4>
         <h6>{{ event_date }}</h6>
         <p>{{ event_desc }}</p>
+        <p class="events-schedule">{{ event_sched }}</p>
     </div>
 
     <div class="text-center">
