--- a/root/templates/create.html
+++ b/root/templates/create.html
@@ -20,6 +20,10 @@
             <textarea class="form-control" name="event_desc" rows="7" type="text" placeholder="Fundraiser event for ABC organization"/></textarea>
         </div>
         <div class="form-group">
+            <label>Schedule:</label>
+            <textarea class="form-control" name="event_sched" rows="7" type="text" placeholder="8:00AM: Check in"/></textarea>
+        </div>
+        <div class="form-group">
             <label>Location:</label>
             <input class="form-control" name="event_loc" type="text" placeholder="Royal Golf Club"/>
         </div>
