--- a/root/templates/orgedit.html
+++ b/root/templates/orgedit.html
@@ -20,6 +20,10 @@
             <textarea class="form-control" name="event_desc" rows="7" type="text" value="{{event.description}}"/></textarea>
         </div>
         <div class="form-group">
+            <label>Schedule:</label>
+            <textarea class="form-control" name="event_sched" rows="7" type="text" value="{{event.schedule}}"/></textarea>
+        </div>
+        <div class="form-group">
             <label>Location:</label>
             <input class="form-control" name="event_loc" type="text" value="{{event.location}}"/>
         </div>
