--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -29,21 +29,53 @@
             <p>{{ participants|length }} person(s) registered for this event:</p>
             
             {% if org_status %}
-                <ul class="player-list" id="sortable">
-                    {% for p in participants %}
-                        <li class="sortedPlayer">
-                            {{ p.username }}
-                            {% if not p.firstname and not p.lastname %}
-                                <span>Name: Unspecified</span>
-                            {% else %}
-                                <span>Name: {{ p.firstname}} {{p.lastname}}</span>
-                            {% endif %}
-                            <span>Email: <a href="mailto:{{ p.email }}">{{ p.email }}</a></span>
-                        </li>
-                    {% endfor %}
-                </ul>
+                <div class="row">
+                    <div class="col col-xs-1">
+                        <ul class="player-order">
+                            {% for p in participants %}
+                                <li>{{forloop.counter}}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+
+                    <div class="col col-xs-10">
+                        <ul class="player-list" id="sortable">
+                            {% for p in participants %}
+                                <li class="sortedPlayer">
+                                    <i class="fa fa-arrows"></i><b class="sortedPlayerName">{{ p.0.username }}</b>
+                                    {% if not p.0.firstname and not p.0.lastname %}
+                                        <span> | Name: Unspecified | </span>
+                                    {% else %}
+                                        <span> | Name: <b>{{ p.0.firstname}} {{p.0.lastname}}</b> | </span>
+                                    {% endif %}
+                                    <span>Email: <a href="mailto:{{ p.0.email }}">{{ p.0.email }}</a></span>
+                                    <table class="table">
+                                        <tr>
+                                            <td>
+                                                <label>Tee time</label>
+                                                <input value="{{p.1.0}}" name="tee" class="form-control" type="text"/>
+                                            </td>
+                                            <td>
+                                                <label>Cart Assignment</label>
+                                                <input value="{{p.1.1}}" name="cart" class="form-control" type="text"/>
+                                            </td>
+                                            <td>
+                                                <label>Flight</label>
+                                                <input value="{{p.1.2}}" name="flight" class="form-control" type="text"/>
+                                            </td>
+                                            <td>
+                                                <label>Score</label>
+                                                <input value="{{p.1.3}}" name="score" class="form-control" type="text"/>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
                 <div class="text-center">
-                    <a id="sortedPlayersList" class="btn btn-primary">Save Current Order</a>
+                    <a id="sortedPlayersList" class="btn btn-primary">Save</a>
                 </div>
             {% else %}
                 <ul class="player-list">
@@ -77,13 +109,30 @@
         $("#sortable").sortable();
         $("#sortable").disableSelection();
         $("#sortedPlayersList").click(function() {
-            var playersObject = $(".sortedPlayer");
+            var playersObject = $(".sortedPlayerName");
             var players = [];
             for(var i = 0; i < playersObject.length; i++) {
                 players.push(playersObject[i].innerText);
             }
-            window.location.href="rearrange?p=" + players.join();
+            var tee = grabInputValues("input[name='tee']");
+            var flight = grabInputValues("input[name='flight']");
+            var cart = grabInputValues("input[name='cart']");
+            var score = grabInputValues("input[name='score']");
+            window.location.href="rearrange?p=" + players.join() + 
+                                        "&tee=" + tee.join() +
+                                        "&flight=" + flight.join() +
+                                        "&cart=" + cart.join() +
+                                        "&score=" + score.join();
         });
+
+        function grabInputValues(selector) {
+            var elements = $(selector);
+            var result = [];
+            for(var i = 0; i < elements.length; i++) {
+                result.push(elements[i].value);
+            }
+            return result;
+        }
     });
 </script>
 {% endblock %}
