--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -193,7 +193,14 @@ label.htmlCheckBox {
 .events-schedule {
     white-space: pre-line;
 }
-
+.volunteer-form {
+    padding: 15px;
+    background-color: white;
+    margin-top: 30px;
+}
+.volunteer-form input {
+    margin-top: 15px;
+}
 /* Org view */
 .org-view{
     padding: 50px;
