--- a/root/templates/eventrequest.html
+++ b/root/templates/eventrequest.html
@@ -11,5 +11,8 @@
             <p>This link either expired or you have not been invited yet!</p>
         </div>
     {% endif %}
+    <div class="text-center">
+        <a class="btn" href="/">Home</a>
+    </div>
 </div>
 {% endblock %}
