Fix bug: user should still be able to see players list.

--- a/root/templates/eventrequest.html
+++ b/root/templates/eventrequest.html
@@ -12,7 +12,7 @@
         </div>
     {% endif %}
     <div class="text-center">
-        <a class="btn" href="/">Home</a>
+        <a class="btn btn-default" href="/">Home</a>
     </div>
 </div>
 {% endblock %}
