--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -81,7 +81,34 @@
             {% else %}
                 <ul class="player-list">
                     {% for p in participants %}
-                        <li>{{ p.username }}</li>
+                        <li>{{ p.0.username }}
+                            {% if not p.0.first_name and not p.0.last_name %}
+                                <span> | Name: Unspecified | </span>
+                            {% else %}
+                                <span> | Name: <b>{{ p.0.first_name}} {{p.0.last_name}}</b> | </span>
+                            {% endif %}
+                            <span>Email: <a href="mailto:{{ p.0.email }}">{{ p.0.email }}</a></span>
+                            <table class="table">
+                                <tr>
+                                    <td>
+                                        <label>Tee time</label>
+                                        <input readonly value="{{p.1.0}}" name="tee" class="form-control" type="text"/>
+                                    </td>
+                                    <td>
+                                        <label>Cart Assignment</label>
+                                        <input readonly value="{{p.1.1}}" name="cart" class="form-control" type="text"/>
+                                    </td>
+                                    <td>
+                                        <label>Flight</label>
+                                        <input readonly value="{{p.1.2}}" name="flight" class="form-control" type="text"/>
+                                    </td>
+                                    <td>
+                                        <label>Score</label>
+                                        <input readonly value="{{p.1.3}}" name="score" class="form-control" type="text"/>
+                                    </td>
+                                </tr>
+                            </table>
+                        </li>
                     {% endfor %}
                 </ul>
             {% endif %}  
