Fix bug: hide panels from public

--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -158,8 +158,9 @@
                 </table>
             {% endif %}
         </div>
-        
+    {% endif %}    
 
+    {% if org_status %}
         <div class="org-shadow event-player-list">
             <h3>Email Blast</h3>
             <div class="event-email-blast">
