--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -43,28 +43,32 @@
                         <ul class="player-list" id="sortable">
                             {% for p in participants %}
                                 <li class="sortedPlayer">
-                                    <i class="fa fa-arrows"></i><b class="sortedPlayerName">{{ p.0.username }}</b>
-                                    {% if not p.0.first_name and not p.0.last_name %}
-                                        <span> | Name: Unspecified | </span>
-                                    {% else %}
-                                        <span> | Name: <b>{{ p.0.first_name}} {{p.0.last_name}}</b> | </span>
-                                    {% endif %}
-                                    <span>Email: <a href="mailto:{{ p.0.email }}">{{ p.0.email }}</a></span>
                                     <table class="table">
                                         <tr>
                                             <td>
+                                                <p class="sortedPlayerName">{{ p.0.username }}</p>
+                                                <i class="fa fa-arrows"></i>
+                                                 Name: <b>
+                                                    {% if not p.0.first_name and not p.0.last_name %}
+                                                        Unspecified
+                                                    {% else %}
+                                                        {{ p.0.first_name}} {{p.0.last_name}}
+                                                    {% endif %}
+                                                </b>
+                                            </td>
+                                            <td class="shortCol">
                                                 <label>Tee time</label>
                                                 <input value="{{p.1.0}}" name="tee" class="form-control" type="text"/>
                                             </td>
-                                            <td>
+                                            <td class="shortCol">
                                                 <label>Cart Assignment</label>
                                                 <input value="{{p.1.1}}" name="cart" class="form-control" type="text"/>
                                             </td>
-                                            <td>
+                                            <td class="shortCol">
                                                 <label>Flight</label>
                                                 <input value="{{p.1.2}}" name="flight" class="form-control" type="text"/>
                                             </td>
-                                            <td>
+                                            <td class="shortCol">
                                                 <label>Score</label>
                                                 <input value="{{p.1.3}}" name="score" class="form-control" type="text"/>
                                             </td>
@@ -81,15 +85,20 @@
             {% else %}
                 <ul class="player-list">
                     {% for p in participants %}
-                        <li>{{ p.0.username }}
-                            {% if not p.0.first_name and not p.0.last_name %}
-                                <span> | Name: Unspecified | </span>
-                            {% else %}
-                                <span> | Name: <b>{{ p.0.first_name}} {{p.0.last_name}}</b> | </span>
-                            {% endif %}
-                            <span>Email: <a href="mailto:{{ p.0.email }}">{{ p.0.email }}</a></span>
+                        <li>
                             <table class="table">
                                 <tr>
+                                    <td>
+                                        <p class="sortedPlayerName">{{ p.0.username }}</p>
+                                        <i class="fa fa-arrows"></i>
+                                         Name: <b>
+                                            {% if not p.0.first_name and not p.0.last_name %}
+                                                Unspecified
+                                            {% else %}
+                                                {{ p.0.first_name}} {{p.0.last_name}}
+                                            {% endif %}
+                                        </b>
+                                    </td>
                                     <td>
                                         <label>Tee time</label>
                                         <input readonly value="{{p.1.0}}" name="tee" class="form-control" type="text"/>
