--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -2,9 +2,13 @@
 {% block content %}
 
 <div class="contentView">
-    <div class="headerText">
+    <!--<div class="headerText">
         <h1>Your tournaments. Organized.</h1>
         <h4>We make it easy to organize golf events.</h4>
+    </div>-->
+    <div class="headerText">
+        <h1>&nbsp;</h1>
+        <h4>&nbsp;</h4>
     </div>
     <table id="main-event-table" class="table table-bordered table-hover table-striped eventTable">
         <thead style="display:none;">
