--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -33,6 +33,7 @@
                 <div class="row">
                     <div class="col col-xs-1">
                         <ul class="player-order">
+                            <li class="event-player-header"></li>
                             {% for p in participants %}
                                 <li>{{forloop.counter}}</li>
                             {% endfor %}
@@ -41,11 +42,22 @@
 
                     <div class="col col-xs-10">
                         <ul class="player-list" id="sortable">
+                            <li class="event-player-header">
+                                <table class="table">
+                                    <tr>
+                                        <th class="firstCol"></th>
+                                        <th class="shortCol">Tee time</th>
+                                        <th class="shortCol">Cart Assignment</th>
+                                        <th class="shortCol">Flight</th>
+                                        <th class="shortCol">Score</th>
+                                    </tr>
+                                </table>
+                            </li>
                             {% for p in participants %}
                                 <li class="sortedPlayer">
                                     <table class="table">
                                         <tr>
-                                            <td>
+                                            <td class="firstCol">
                                                 <p class="sortedPlayerName">{{ p.0.username }}</p>
                                                 <i class="fa fa-arrows"></i>
                                                  Name: <b>
@@ -57,19 +69,15 @@
                                                 </b>
                                             </td>
                                             <td class="shortCol">
-                                                <label>Tee time</label>
                                                 <input value="{{p.1.0}}" name="tee" class="form-control" type="text"/>
                                             </td>
                                             <td class="shortCol">
-                                                <label>Cart Assignment</label>
                                                 <input value="{{p.1.1}}" name="cart" class="form-control" type="text"/>
                                             </td>
                                             <td class="shortCol">
-                                                <label>Flight</label>
                                                 <input value="{{p.1.2}}" name="flight" class="form-control" type="text"/>
                                             </td>
                                             <td class="shortCol">
-                                                <label>Score</label>
                                                 <input value="{{p.1.3}}" name="score" class="form-control" type="text"/>
                                             </td>
                                         </tr>
@@ -84,13 +92,22 @@
                 </div>
             {% else %}
                 <ul class="player-list">
+                    <li class="event-player-header">
+                        <table class="table">
+                            <tr>
+                                <th class="firstCol"></th>
+                                <th class="shortCol">Tee time</th>
+                                <th class="shortCol">Cart Assignment</th>
+                                <th class="shortCol">Flight</th>
+                                <th class="shortCol">Score</th>
+                            </tr>
+                        </table>
+                    </li>
                     {% for p in participants %}
                         <li>
                             <table class="table">
                                 <tr>
-                                    <td>
-                                        <p class="sortedPlayerName">{{ p.0.username }}</p>
-                                        <i class="fa fa-arrows"></i>
+                                    <td class="firstCol">
                                          Name: <b>
                                             {% if not p.0.first_name and not p.0.last_name %}
                                                 Unspecified
@@ -99,20 +116,16 @@
                                             {% endif %}
                                         </b>
                                     </td>
-                                    <td>
-                                        <label>Tee time</label>
+                                    <td class="shortCol">
                                         <input readonly value="{{p.1.0}}" name="tee" class="form-control" type="text"/>
                                     </td>
-                                    <td>
-                                        <label>Cart Assignment</label>
+                                    <td class="shortCol">
                                         <input readonly value="{{p.1.1}}" name="cart" class="form-control" type="text"/>
                                     </td>
-                                    <td>
-                                        <label>Flight</label>
+                                    <td class="shortCol">
                                         <input readonly value="{{p.1.2}}" name="flight" class="form-control" type="text"/>
                                     </td>
-                                    <td>
-                                        <label>Score</label>
+                                    <td class="shortCol">
                                         <input readonly value="{{p.1.3}}" name="score" class="form-control" type="text"/>
                                     </td>
                                 </tr>
